src/test/test-models/bad/validate_set_fun_type_named_bad1.stan
transformed data {
  real x;
  x <- normal_rng(0,1);
}
parameters {
  real y;
}
model {
  y ~ normal(0,1);
}
